# enclave-station

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  build-multiarch.sh  docker-compose.yml  run-tests.sh
backend/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
backend/src/: config.h  main.cpp  recurrence.cpp  recurrence.h  upload_manager.cpp  upload_manager.h  zip_builder.h
backend/src/ai/: llm_client.cpp  llm_client.h
backend/src/auth/: password.cpp  password.h  pki.cpp  pki.h  totp.cpp  totp.h  webauthn.cpp  webauthn.h
backend/src/db/: database.cpp  database.h  db_thread_pool.cpp  db_thread_pool.h
backend/src/handlers/: admin_approval_utils.cpp  admin_approval_utils.h  admin_handler.cpp  admin_handler.h  admin_settings_utils.cpp  admin_settings_utils.h  ai_handler.cpp  ai_handler.h  auth_handler.cpp  auth_handler.h  auth_payload_utils.cpp  auth_payload_utils.h  auth_utils.cpp  auth_utils.h  calendar_handler.cpp  calendar_handler.h  channel_handler.cpp  channel_handler.h  file_access_utils.cpp  file_handler.cpp  file_handler.h  format_utils.cpp  handler_utils.cpp  handler_utils.h  notification_handler.cpp  notification_handler.h  search_handler.h  (+11 more)
backend/tests/: CMakeLists.txt  test_admin_settings_utils.cpp  test_auth_credentials.cpp  test_calendar.cpp  test_config.cpp  test_database.cpp  test_file_access_utils.cpp  test_file_handler.cpp  test_handler_utils.cpp  test_notifications.cpp  test_personal_spaces.cpp  test_search_handler.cpp  test_space_files.cpp  test_tasks.cpp  test_wiki.cpp  test_zip_builder.cpp
(+182 files in other folders)
